# connector_arrow

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  flake.nix  rust-toolchain.toml  treefmt.toml
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
connector_arrow/: Cargo.toml
connector_arrow/examples/: batch_test.rs
connector_arrow/src/: api.rs  arrow_batch_iter.rs  constants.rs  data_order.rs  dispatcher.rs  duckdb.rs  errors.rs  lib.rs  macros.rs  params.rs  source_router.rs  sql.rs  sqlite.rs  types.rs  typesystem.rs
connector_arrow/src/destinations/: mod.rs
connector_arrow/src/destinations/arrow/: arrow_assoc.rs  funcs.rs  mod.rs  typesystem.rs
connector_arrow/src/destinations/arrow2/: arrow_assoc.rs  errors.rs  mod.rs
connector_arrow/src/destinations/arrowstream/: mod.rs
connector_arrow/src/duckdb/: append.rs  mod.rs  schema.rs
connector_arrow/src/frontend/: get_arrow.rs  mod.rs  partition.rs
connector_arrow/src/mysql/: append.rs  mod.rs  query.rs  schema.rs  types.rs
connector_arrow/src/postgres/: append.rs  decimal.rs  mod.rs  protocol_cursor.rs  protocol_extended.rs  protocol_simple.rs  query.rs  schema.rs  types.rs
connector_arrow/src/rewrite/: api.rs  consumer_row.rs  data_store.rs  duckdb.rs  errors.rs  mod.rs  sqlite.rs  transport.rs
connector_arrow/src/rewrite/postgres/: mod.rs  protocol_cursor.rs  protocol_simple.rs  types.rs
connector_arrow/src/rewrite/util/: arrow_reader.rs  mod.rs  row_collect.rs  row_writer.rs  transport.rs
connector_arrow/src/rusqlite/: mod.rs  schema.rs  types.rs
connector_arrow/src/sources/: mod.rs
connector_arrow/src/sources/bigquery/: mod.rs  typesystem.rs
connector_arrow/src/sources/csv/: mod.rs
connector_arrow/src/sources/dummy/: mod.rs
connector_arrow/src/sources/mssql/: mod.rs
connector_arrow/src/sources/mysql/: mod.rs
connector_arrow/src/sources/oracle/: mod.rs
connector_arrow/src/sources/postgres/: mod.rs
connector_arrow/src/sources/sqlite/: mod.rs
connector_arrow/src/sqlite/: append.rs  mod.rs  query.rs  schema.rs  types.rs
connector_arrow/src/tiberius/: append.rs  mod.rs  query.rs  schema.rs  types.rs
connector_arrow/src/transports/: mod.rs
connector_arrow/src/util/: arrow_reader.rs  coerce.rs  escape.rs  mod.rs  row_collect.rs  row_reader.rs  row_writer.rs  transport.rs
connector_arrow/tests/data/: basic_small.parquet  empty.parquet  numeric.parquet  temporal.parquet
connector_arrow/tests/it/: generator.rs  main.rs  spec.rs  test_arrow.rs  test_bigquery.rs  test_clickhouse.rs  test_csv.rs  test_duckdb.rs  test_mssql.rs  test_mysql.rs  test_oracle.rs  test_polars.rs  test_postgres.rs  test_postgres_common.rs  test_postgres_extended.rs  test_postgres_simple.rs  test_sqlite.rs  test_tiberius.rs  tests.rs  util.rs
dbs/: Justfile  docker-compose.yml  duckdb.sql  sqlite.sql
test_generator/: Cargo.toml
test_generator/src/: main.rs
