[package]
authors = ["Aljaž Mur Eržen"]
description = "Load data from databases to Apache Arrow, the fastest way."
documentation = "https://docs.rs/connector_arrow"
edition = "2018"
license = "MIT"
name = "connector_arrow"
readme = "../README.md"
repository = "https://github.com/aljazerzen/connector_arrow"
version = "0.1.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "connector_arrow"

[dependencies]
itertools = "0.10"
log = "0.4"
thiserror = "1"
chrono = "0.4"
serde_json = "1"

# make sure this is in-sync with duckdb
arrow = { version = "49", default-features = false }

# common optional
hex = { version = "0.4", optional = true }
rust_decimal = { version = "1", features = ["db-postgres"], optional = true }
rust_decimal_macros = { version = "1", optional = true }
urlencoding = { version = "2.1", optional = true }
uuid = { version = "0.8", optional = true }
fallible-streaming-iterator = { version = "0.1", optional = true }
csv = { version = "1", optional = true }

[dependencies.postgres]
version = "0.19"
default-features = false
optional = true
features = ["with-chrono-0_4", "with-uuid-0_8", "with-serde_json-1"]

[dependencies.rusqlite]
version = "0.30.0"
default-features = false
optional = true

[dependencies.duckdb]
version = "0.9"
default-features = false
optional = true

[dev-dependencies]
env_logger = "0.9"
arrow = { version = "49", features = ["prettyprint"] }
insta = { version = "1.34.0" }

[features]
all = ["src_sqlite", "src_duckdb", "src_postgres"]
src_postgres = [
    "postgres",
    "csv",
    "hex",
    "uuid",
    "rust_decimal",
    "rust_decimal_macros",
]
src_sqlite = ["rusqlite", "fallible-streaming-iterator", "urlencoding"]
src_duckdb = [
    "duckdb",
    "urlencoding",
    "uuid",
    "rust_decimal",
    "fallible-streaming-iterator",
]

[package.metadata.docs.rs]
features = ["all"]
