[package]
authors = ["Aljaž Mur Eržen"]
description = "Load data from databases to Apache Arrow, the fastest way."
documentation = "https://docs.rs/connector_arrow"
edition = "2018"
license = "MIT"
name = "connector_arrow"
readme = "../README.md"
repository = "https://github.com/aljazerzen/connector_arrow"
version = "0.4.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "connector_arrow"

[dependencies]
itertools = "0.12"
log = "0.4"
thiserror = "1"
chrono = "0.4"
serde_json = "1"

# make sure this is in-sync with duckdb
arrow = { version = "50", default-features = false }

# common optional
hex = { version = "0.4", optional = true }
fallible-streaming-iterator = { version = "0.1", optional = true }
csv = { version = "1", optional = true }
bytes = { version = "1", optional = true }
byteorder = { version = "1", optional = true }
regex = "1.10.3"
once_cell = "1.19.0"

[dependencies.postgres]
version = "0.19"
default-features = false
optional = true
features = ["with-chrono-0_4", "with-uuid-0_8", "with-serde_json-1"]

[dependencies.postgres-protocol]
version = "0.6.6"
default-features = false
optional = true

[dependencies.rusqlite]
version = "0.30.0"
default-features = false
optional = true

[dependencies.duckdb]
version = "0.9.2"
default-features = false
optional = true

[dev-dependencies]
env_logger = "0.11"
arrow = { version = "50", features = ["prettyprint"], default-features = false }
similar-asserts = { version = "1.5.0" }
half = "2.3.1"
rand = { version = "0.8.5", default-features = false }
rand_chacha = "0.3.1"
rstest = { version = "0.18.2", default-features = false }


[features]
all = ["src_sqlite", "src_duckdb", "src_postgres"]
src_postgres = [
    "postgres",
    "postgres-protocol",
    "csv",
    "hex",
    "bytes",
    "byteorder",
]
src_sqlite = ["rusqlite"]
src_duckdb = ["duckdb", "fallible-streaming-iterator"]

[package.metadata.docs.rs]
features = ["all"]
